# ayanami-nemesis-analyzer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
ClangPlugins/: CMakeLists.txt
ClangPlugins/assign-or-float-compIn-branch-cond-checker/: AssignOrFloatCompInBranchCondChecker.cpp  CMakeLists.txt  README.md
ClangPlugins/function-printer/: CMakeLists.txt  PrintFunctionsAction.cpp  PrintFunctionsAction.h
ClangPlugins/sample-checker/: CMakeLists.txt  MainCallChecker.cpp
ClangPlugins/simple-allocation-operators-checker/: CMakeLists.txt  DeleteOperatorChecker.cpp  README.md
TestANA/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  run.sh  runAllocation.sh  runAssignInCpp.sh  runAssignOrFloatCompInBranchCondChecker.sh  runReport.sh  runSample.sh
TestANA/testcase/: foo-bar.cpp
TestANA/testcase/AssignOrFloatCompInBranchCondChecker/testsForAssign/: assignTest_1.c  assignTest_2.c  assignTest_3.c  assignTest_4.c  assignTest_5.c  assignTest_6.c  assignTest_7.c  assignTest_8.c  assignTest_cpp.cpp
TestANA/testcase/AssignOrFloatCompInBranchCondChecker/testsForFloatComparison/: floatCompTest_1.c  floatCompTest_2.c  floatCompTest_3.c  floatCompTest_4.c  floatCompTest_5.c  floatCompTest_6.c  floatCompTest_7.c  floatCompTest_8.c  floatCompTest_9.c  floatCompTest_cpp.cpp
TestANA/testcase/SimpleAlloctionOperatorsChecker/delete_null/: 1.cpp  2.cpp  3.cpp  4.cpp
TestANA/testcase/SimpleAlloctionOperatorsChecker/memory_leak/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
TestANA/testcase/SimpleAlloctionOperatorsChecker/multiple_delete/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
TestANA/testcase/SimpleAlloctionOperatorsChecker/possible_delete_null/: 1.cpp  2.cpp
TestANA/testcase/SimpleAlloctionOperatorsChecker/use_after_delete/: 1.cpp  2.cpp
TestANA/testcase/sampleChecker/: sampleChecker.c  sampleChecker.cpp
cmake/: SourcesAndHeaders.cmake
include/borrow_checker/: borrow.hpp  borrow_checker.hpp
include/project/: concept_checker.h
src/: concept_checker.cpp  main.cpp  tmp.cpp
test/: CMakeLists.txt
test/src/: borrow_checker_test.cpp  borrow_test.cpp
utils/: benchmark.sh  makeReport.sh  runAllTest.sh  showReport.sh
